	Added new elementpath option that makes it possible to disable the element path but keep the statusbar.
	Added new option table_style_by_css for the table plugin to set table styling with css rather than table attributes.
	Added new link_assume_external_targets option to prompt the user to prepend http:// prefix if the supplied link does not contain a protocol prefix.
	Fixed bug where selection starting from out side of the body wouldn't produce a proper selection range on IE 11.
	Fixed bug where pressing enter twice before a table moves the cursor in the table and causes a javascript error.
	Fixed bug where advanced image styles were not respected.
	Fixed bug where the less common Shift+Delete didn't produce a proper cut operation on WebKit browsers.
	Fixed bug where image/media size constrain logic would produce NaN when handling non number values.
	Fixed bug where internal classes where removed by the removeformat command.
	Fixed bug with creating links table cell contents with a specific selection would throw a exceptions on WebKit/Blink.
	Fixed bug where valid_classes option didn't work as expected according to docs. Patch provided by thorn0.
	Fixed bug where jQuery plugin would patch the internal methods multiple times. Patch provided by Drew Martin.
	Fixed bug where backspace key wouldn't delete the current selection of newly formatted content.
	Fixed bug where type over of inline formatting elements wouldn't properly keep the format on WebKit/Blink.
	Fixed bug where selection needed to be properly normalized on modern IE versions.
	Fixed bug where Command+Backspace didn't properly delete the whole line of text but the previous word.
	Fixed bug where UI active states wheren't properly updated on IE if you placed caret within the current range.
	Fixed bug where delete/backspace on WebKit/Blink would remove span elements created by the user.